[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/PhoneSequence/phone_startButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/PhoneSequence/phone_full.png" type="Texture" id=2]
[ext_resource path="res://Assets/PhoneSequence/phone_creditsButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/PhoneSequence/phone_endingsButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/PhoneSequence/phone_continueButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/PhoneSequence/phone_noButton.png" type="Texture" id=6]
[ext_resource path="res://Assets/PhoneSequence/phone_quitButton.png" type="Texture" id=7]
[ext_resource path="res://Assets/PhoneSequence/phone_yesButton.png" type="Texture" id=8]
[ext_resource path="res://Assets/timebarArrow.png" type="Texture" id=9]
[ext_resource path="res://Assets/PhoneSequence/SettingsButtonOp2.png" type="Texture" id=10]
[ext_resource path="res://Assets/PhoneSequence/phone_textbox.png" type="Texture" id=11]
[ext_resource path="res://Assets/Fonts/Press_Start_2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Assets/PhoneSequence/phone_StartBG.png" type="Texture" id=13]
[ext_resource path="res://Assets/PhoneSequence/phone_PauseBG.png" type="Texture" id=14]
[ext_resource path="res://Assets/PhoneSequence/Opening/phone_open2.png" type="Texture" id=15]
[ext_resource path="res://Assets/PhoneSequence/Opening/phone_open3.png" type="Texture" id=16]
[ext_resource path="res://Assets/PhoneSequence/Opening/phone_open4.png" type="Texture" id=17]
[ext_resource path="res://Assets/PhoneSequence/Opening/phone_open5.png" type="Texture" id=18]
[ext_resource path="res://Assets/PhoneSequence/Opening/phone_open6.png" type="Texture" id=19]
[ext_resource path="res://Assets/PhoneSequence/Opening/phone_openBG.png" type="Texture" id=20]
[ext_resource path="res://Assets/PhoneSequence/Opening/phone_open1.png" type="Texture" id=21]
[ext_resource path="res://Assets/PhoneSequence/Opening/phone_open7.png" type="Texture" id=22]
[ext_resource path="res://Assets/PhoneSequence/Opening/phone_open8.png" type="Texture" id=23]
[ext_resource path="res://phone.gd" type="Script" id=24]
[ext_resource path="res://Assets/dialogue_arrow.png" type="Texture" id=25]

[sub_resource type="DynamicFont" id=3]
size = 8
extra_spacing_bottom = 4
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=1]
resource_name = "Opening"
length = 6.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("../OpeningAni/Ani0:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../OpeningAni/Ani1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../OpeningAni/Ani2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../OpeningAni/Ani3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../OpeningAni/Ani4:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../OpeningAni/Ani5:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../OpeningAni/Ani6:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../OpeningAni/Ani7:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 3.5, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../OpeningAni/Ani8:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../OpeningAni/Ani0:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../OpeningAni/Ani1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../OpeningAni/Ani2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../OpeningAni/Ani3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../OpeningAni/Ani4:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../OpeningAni/Ani5:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../OpeningAni/Ani6:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../OpeningAni/Ani7:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../OpeningAni/Ani8:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../OpeningAni/Ani8:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="phone" type="CanvasLayer"]

[node name="phone" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )

[node name="PauseBG" type="Sprite" parent="phone"]
visible = false
position = Vector2( 320, 172.999 )
scale = Vector2( 1, 1.03333 )
texture = ExtResource( 14 )

[node name="StartBG" type="Sprite" parent="phone"]
position = Vector2( 320, 172.999 )
scale = Vector2( 1, 1.03333 )
texture = ExtResource( 13 )

[node name="PhoneBase" type="Sprite" parent="phone"]
position = Vector2( 320, 178.999 )
texture = ExtResource( 2 )

[node name="QuitBtn" type="TextureButton" parent="phone"]
visible = false
margin_left = 270.0
margin_top = 153.999
margin_right = 370.0
margin_bottom = 183.999
texture_normal = ExtResource( 7 )

[node name="ContinueBtn" type="TextureButton" parent="phone"]
visible = false
margin_left = 270.0
margin_top = 118.999
margin_right = 370.0
margin_bottom = 148.999
texture_normal = ExtResource( 5 )

[node name="StartBtn" type="TextureButton" parent="phone"]
margin_left = 270.0
margin_top = 118.999
margin_right = 370.0
margin_bottom = 148.999
texture_normal = ExtResource( 1 )

[node name="EndingsBtn" type="TextureButton" parent="phone"]
margin_left = 270.0
margin_top = 153.999
margin_right = 370.0
margin_bottom = 183.999
texture_normal = ExtResource( 4 )

[node name="CreditsBtn" type="TextureButton" parent="phone"]
margin_left = 270.0
margin_top = 189.999
margin_right = 370.0
margin_bottom = 219.999
texture_normal = ExtResource( 3 )

[node name="SettingsBtmIcon" type="TextureButton" parent="phone"]
margin_left = 353.0
margin_top = 223.999
margin_right = 373.0
margin_bottom = 243.999
texture_normal = ExtResource( 10 )

[node name="ending1" type="TextureButton" parent="phone"]
visible = false
margin_left = 272.0
margin_top = 96.0
margin_right = 312.0
margin_bottom = 136.0
texture_normal = ExtResource( 9 )
texture_disabled = ExtResource( 25 )

[node name="ending2" type="TextureButton" parent="phone"]
visible = false
margin_left = 328.0
margin_top = 96.0
margin_right = 368.0
margin_bottom = 136.0
texture_normal = ExtResource( 9 )
texture_disabled = ExtResource( 25 )

[node name="ending3" type="TextureButton" parent="phone"]
visible = false
margin_left = 272.0
margin_top = 154.0
margin_right = 312.0
margin_bottom = 194.0
texture_normal = ExtResource( 9 )
texture_disabled = ExtResource( 25 )

[node name="ending4" type="TextureButton" parent="phone"]
visible = false
margin_left = 328.0
margin_top = 149.0
margin_right = 368.0
margin_bottom = 189.0
texture_normal = ExtResource( 9 )
texture_disabled = ExtResource( 25 )

[node name="ending5" type="TextureButton" parent="phone"]
visible = false
margin_left = 264.0
margin_top = 208.0
margin_right = 304.0
margin_bottom = 248.0
texture_normal = ExtResource( 9 )
texture_disabled = ExtResource( 25 )

[node name="TextboxBG" type="Sprite" parent="phone"]
visible = false
position = Vector2( 319, 177.499 )
scale = Vector2( 1, 1.23001 )
texture = ExtResource( 11 )

[node name="Text" type="Label" parent="phone"]
visible = false
margin_left = 270.0
margin_top = 120.0
margin_right = 371.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 3 )
text = "yo! ptatpp are playing at the jumping lizard tonite! wanna go?"
autowrap = true

[node name="NoBtn" type="TextureButton" parent="phone"]
visible = false
margin_left = 324.0
margin_top = 209.999
margin_right = 371.0
margin_bottom = 238.999
texture_normal = ExtResource( 6 )

[node name="YesBtn" type="TextureButton" parent="phone"]
visible = false
margin_left = 270.0
margin_top = 209.999
margin_right = 317.0
margin_bottom = 238.999
texture_normal = ExtResource( 8 )

[node name="OpeningAni" type="AnimationPlayer" parent="phone"]
root_node = NodePath("../CreditsBtn")
playback_speed = 1.5
anims/Opening = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Ani8" type="Sprite" parent="phone/OpeningAni"]
position = Vector2( 320, 178.999 )
texture = ExtResource( 23 )

[node name="Ani7" type="Sprite" parent="phone/OpeningAni"]
position = Vector2( 320, 178.999 )
texture = ExtResource( 22 )

[node name="Ani6" type="Sprite" parent="phone/OpeningAni"]
position = Vector2( 320, 178.999 )
texture = ExtResource( 19 )

[node name="Ani5" type="Sprite" parent="phone/OpeningAni"]
position = Vector2( 320, 178.999 )
texture = ExtResource( 18 )

[node name="Ani4" type="Sprite" parent="phone/OpeningAni"]
position = Vector2( 320, 178.999 )
texture = ExtResource( 17 )

[node name="Ani3" type="Sprite" parent="phone/OpeningAni"]
position = Vector2( 320, 178.999 )
texture = ExtResource( 16 )

[node name="Ani2" type="Sprite" parent="phone/OpeningAni"]
position = Vector2( 320, 178.999 )
texture = ExtResource( 15 )

[node name="Ani1" type="Sprite" parent="phone/OpeningAni"]
position = Vector2( 320, 178.999 )
texture = ExtResource( 21 )

[node name="Ani0" type="Sprite" parent="phone/OpeningAni"]
position = Vector2( 320, 178.999 )
texture = ExtResource( 20 )

[connection signal="pressed" from="phone/StartBtn" to="phone" method="_on_StartBtn_pressed"]
[connection signal="pressed" from="phone/EndingsBtn" to="phone" method="_on_EndingsBtn_pressed"]
[connection signal="pressed" from="phone/CreditsBtn" to="phone" method="_on_CreditsBtn_pressed"]
[connection signal="pressed" from="phone/NoBtn" to="phone" method="_on_NoBtn_pressed"]
[connection signal="pressed" from="phone/YesBtn" to="phone" method="_on_YesBtn_pressed"]
